# BT-Canopy

./: .gitignore  Dockerfile  LICENSE  README.md  canopy_be6da7c131bd28dfd15ec3dc2e4c4d61.csv  multi-exec.sh  node_coverage.csv
dev-tools/: Dockerfile  README.md  multi-exec.sh  turtlebot_startup.sh  turtlebot_startup_container.sh  turtlebot_startup_local.sh
example_images/: README.md
example_images/nav2_with_canopy/: Dockerfile  README.md  start_container_and_run_tests.sh
example_images/py_trees_ros_examples/: README.md
examples/nav2_with_canopy/: Dockerfile  README.md  run_tests_with_coverage.sh  start_container_and_run_tests.sh
examples/nav2_with_canopy/case_study/: aggregated_results.xlsx  lcov_coverage.csv  navigate_through_poses_coverage.csv  navigate_to_pose_coverage.csv  plot_generator.py
examples/nav2_with_canopy/case_study/test1/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test10/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test2/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test3/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test4/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test5/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test6/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test7/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test8/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/nav2_with_canopy/case_study/test9/: canopy_navigate_through_poses_w_replanning_and_recovery.csv  canopy_navigate_to_pose_w_replanning_and_recovery.csv
examples/py_trees_ros_examples_with_canopy/: Dockerfile
examples/py_trees_ros_with_canopy/: README.md
src/BTWatcher/: CMakeLists.txt  package.xml
src/BTWatcher/src/monitor/src/: tree_monitor.cpp
src/behaviortree_cpp_v3_ros2_publisher/: CMakeLists.txt  package.xml
src/behaviortree_cpp_v3_ros2_publisher/include/behaviortree_cpp_v3_ros2_publisher/: bt_ros_publisher.hpp  bt_ros_publisher.hpp.old  bt_ros_publisher_impl.hpp  bt_ros_server.hpp
src/behaviortree_cpp_v3_ros2_publisher/include/btcpp_ros2_publisher/: bt_ros_publisher.hpp
src/bt_canopy_bringup/: package.xml  setup.cfg  setup.py
src/bt_canopy_bringup/bt_canopy_bringup/: coverage_monitor.py  coverage_monitor_live.py
src/bt_canopy_bringup/bt_canopy_bringup/static/: index.html  style.css  tree.js
src/bt_canopy_bringup/launch/: monitor.launch.py  monitor_live.launch.py  monitor_with_bridge.launch.py
src/bt_monitor/: CMakeLists.txt  package.xml
src/bt_monitor/msg/: BehaviorTreeLog.msg  BehaviorTreeStatusChange.msg
src/bt_monitor/src/: tree_listener.cpp
src/btcpp_ros2_bridge/: CMakeLists.txt  README.md  package.xml
src/btcpp_ros2_bridge/include/btcpp_ros2_bridge/: deserializer.hpp  tree_node.hpp
src/btcpp_ros2_bridge/launch/: zmq_ros_republisher.launch.py
src/btcpp_ros2_bridge/src/: deserializer.cpp  deserializer.h  get_tree_nodes_service.cpp  tree_listener.cpp  zmq_to_ros_republisher.cpp
src/btcpp_ros2_publisher/: CMakeLists.txt  package.xml
src/btcpp_ros2_publisher/include/btcpp_ros2_publisher/: ros_topic_logger.hpp
src/py_trees_ros_publisher/: package.xml  setup.cfg  setup.py
src/py_trees_ros_publisher/launch/: publisher.launch.py
src/py_trees_ros_publisher/py_trees_ros_publisher/: __init__.py  custom_find_service.py  old.py  topic_publisher.py
src/tree_msgs/: CMakeLists.txt  README.md  package.xml
src/tree_msgs/msg/: BehaviorTree.msg  BehaviorTreeStatusChange.msg  StatusChange.msg  StatusChangeLog.msg  TreeNode.msg
src/tree_msgs/srv/: GetTreeNodes.srv
