<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behaviortree_cpp_v3_ros2_publisher</name>
  <version>0.0.0</version>
  <description>A beheaviortree_cpp_v3 logger for publishing behavior tree info to the ROS2 network.</description>
  <maintainer email="entran@ncsu.edu">Ethan N Tran</maintainer>
  <maintainer email="samuelhodges3000@gmail.com">Samuel Hodges</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tree_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
